src/objects/Marcom_Service_Request__c/Marcom_Service_Request__c.object-meta.xml
<CustomObject>
    <description>Marcom Service Request</description>
    <label>Marcom_Service_Request</label>
    <nameField>
        <displayFormat>MARCOM_SR-{0000000000}</displayFormat>
        <label>Marcom_Service_Request_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marcom_Service_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>