src/objects/Marcom_Service_Request__c/fields/Marcom_Audience__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Audience__c</fullName>
    <description>For Marcom self service project</description>
    <inlineHelpText>Is your audience internal, external or both?</inlineHelpText>
    <label>Marcom Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>