src/objects/Marcom_Service_Request__c/fields/Marcom_Business__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Business__c</fullName>
    <description>For Marcom self service request Form</description>
    <inlineHelpText>What business/communications objective are you trying accomplish?</inlineHelpText>
    <label>Marcom Business</label>
    <type>TextArea</type>
</CustomField>