src/objects/Marcom_Service_Request__c/fields/Marcom_Market__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Market__c</fullName>
    <description>For Marcom self service project</description>
    <inlineHelpText>What market does this activity fall under</inlineHelpText>
    <label>Marcom Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BGA</fullName>
            </value>
            <value>
                <fullName>D&amp;S</fullName>
            </value>
            <value>
                <fullName>Aero-wide</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ATR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>