src/objects/Marcom_Service_Request__c/fields/Marcom_Related_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Related_Activity__c</fullName>
    <description>For Self service propject</description>
    <inlineHelpText>Please provide any detail related to this activity:</inlineHelpText>
    <label>Marcom Related Activity</label>
    <type>TextArea</type>
</CustomField>