src/objects/Marcom_Service_Request__c/fields/Marcom_Request_Region__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Request_Region__c</fullName>
    <description>Created for Marcom Self Service project : Used in Requested Form</description>
    <inlineHelpText>In what region will this activity take place</inlineHelpText>
    <label>Marcom Request Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEAI</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>