src/objects/Marcom_Service_Request__c/fields/Marcom_Request_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Request_Timeline__c</fullName>
    <description>Created for Marcom Self Service project : Used in Requested Form</description>
    <inlineHelpText>What is the requested timeline for delivery?</inlineHelpText>
    <label>Marcom Request Timeline</label>
    <type>Date</type>
</CustomField>