src/objects/Marcom_Service_Request__c/listViews/All_Service_Requests.listView-meta.xml
<ListView>
    <fullName>All_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>Marcom_SR_Status__c</columns>
    <columns>Marcom_Audience__c</columns>
    <columns>Marcom_Business__c</columns>
    <columns>Marcom_Market__c</columns>
    <columns>Marcom_Request_Region__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Requests</label>
</ListView>